# OpenDraft

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.combined  Dockerfile.combined.dockerignore  LICENSE  README.md  SECURITY.md  build-appstore.sh  build-desktop.sh  build-ios-device.sh  build.sh  opendraft_ai_continuity_mcp_design.md  package.json  release.sh  setup.sh  setup_auth_env.sh  start_backend.sh  start_collab.sh  start_demo.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-intel-mac-legacy.yml  build-intel-mac.yml  deploy-manual.yml  docker-publish.yml  pages.yml  rebuild-legacy-intel.yml  release.yml  test-mac-appstore.yml  upload-mac-appstore-pkg.yml  upload-play-store-aab.yml
backend/: .env.example  deploy-demo-cloudrun.sh  desktop_entry.py  opendraft-api.spec  requirements.txt
backend/app/: config.py  dependencies.py  main.py  plugins.py
collab-server/: .env.example  Dockerfile  deploy-cloudrun.sh  package-lock.json  package.json  setup.sh
collab-server/src/: config.ts  db.ts  server.ts
deploy/: .env.example  Caddyfile  Caddyfile.combined  combined.env.example  deploy.sh  docker-compose.combined.yml  docker-compose.yml  supervisord.conf
docs/: COLLAB_SERVER_DEPLOYMENT.md  CONTRIBUTING.md  FEATURES.md  INSTALLATION.md  PRIVACY.md  RELEASE.md  WINDOWS_SIGNING.md  desktop-build.md  feature-gap-analysis-fade-in.md  mobile-build.md
fastlane/: Appfile
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
images/: make_readme_gif.sh
landing/: faq.html  index.html  report-issue.html
src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json  tauri.js
src-tauri/android-src/: MainActivity.kt  jni-keep-rules.pro
src-tauri/capabilities/: default.json
src-tauri/entitlements/: app.entitlements  sidecar.entitlements
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test-script/: debug-15pages.mjs  debug-compare.mjs  debug-cpl.mjs  debug-cpl2.mjs  debug-drift.mjs  debug-fdx-import.mjs  debug-fdx-later-pages.mjs  debug-layout.mjs  debug-pagebreak.mjs  debug-pagebreak2.mjs  debug-pagebreak3.mjs  debug-pagebreak4.mjs  debug-pagebreak5.mjs  generate_feature_graphic.py  inspect-titlepage.mjs  restore_12years.py  test-docx-export.mjs  test-docx-import.mjs  test-docx-roundtrip.mjs  test-typo-hindi.cjs  test_backend_auth.py  test_per_user_files.py  test_quota.py
user-manual/: beat-board.html  characters.html  collaboration.html  find-replace.html  formatting.html  getting-started.html  import-export.html  index-cards.html  index.html  installation.html  keyboard-shortcuts.html  locations.html  page-setup.html  projects.html  revision-mode.html  scene-navigator.html  script-notes.html  script-statistics.html  search.js  spell-check.html  style.css  tags.html  themes.html  title-page.html  version-history.html  writing-screenplay.html
(+215 files in other folders)
